Hair edit mode crashes with AMD Radeon HD 5700 #62701

Closed
opened 2019-03-18 02:20:34 +01:00 by ward · 26 comments

blender 2.8
intel i5
amd radeon

blender 2.8
6b39dc7672

As title says, alternating between particle hair edit mode and object mode , results in crash
Do this a couple of times right after each other

Here's the file
edit . I can't even open it anymore without blender crashing ( only 5000 hair sttrands )

hair crash .blend

blender 2.8 intel i5 amd radeon blender 2.8 6b39dc7672eb As title says, alternating between particle hair edit mode and object mode , results in crash Do this a couple of times right after each other Here's the file edit . I can't even open it anymore without blender crashing ( only 5000 hair sttrands ) [hair crash .blend](https://archive.blender.org/developer/F6841305/hair_crash_.blend)
Author

Added subscriber: @gentleclockdivider

Added subscriber: @gentleclockdivider

#62822 was marked as duplicate of this issue

#62822 was marked as duplicate of this issue

#63089 was marked as duplicate of this issue

#63089 was marked as duplicate of this issue
Author

Edit . it seems as soon as I create a simple plane with more than 3000 hairs , blender crashes
In 2.79 I could easily go up to 15000
There is def. a memory problem in blender 2.8 , or it just doesn't like older graphics cards :(

Edit . it seems as soon as I create a simple plane with more than 3000 hairs , blender crashes In 2.79 I could easily go up to 15000 There is def. a memory problem in blender 2.8 , or it just doesn't like older graphics cards :(

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Cannot reproduce. Please test with the latest nightly build. Yours is about a week old.

Cannot reproduce. Please test with the latest nightly build. Yours is about a week old.

Added subscriber: @brecht

Added subscriber: @brecht

If it still happens with the latest build, you can also run blender_debug_gpu.cmd and attach the resulting log and system info files.

If it still happens with the latest build, you can also run `blender_debug_gpu.cmd` and attach the resulting log and system info files.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Philipp Oeser self-assigned this 2019-03-27 12:55:59 +01:00
Member

Since last asking for information it has been 7 or more days, due to the policy of our bug tracker we will have to archive the report until the requested information is given.

Since last asking for information it has been 7 or more days, due to the policy of our bug tracker we will have to archive the report until the requested information is given.
Author

Here is the debug gpu log
blender_debug_output.txt

This happened after adding a hair particle system , set number of hairs to zero and manually inserting hairs in edit mode
hope this helps

Here is the debug gpu log [blender_debug_output.txt](https://archive.blender.org/developer/F6890896/blender_debug_output.txt) This happened after adding a hair particle system , set number of hairs to zero and manually inserting hairs in edit mode hope this helps
Author

Using the latest build of blender 2.8
337eb8c1de

blender_debug_output.txt

blender_system_info.txt

Seems like ''atio6axx.dll'' is the culprit , I suspect this has something to do with my (old ) graphics card

Using the latest build of blender 2.8 337eb8c1de4c [blender_debug_output.txt](https://archive.blender.org/developer/F6890942/blender_debug_output.txt) [blender_system_info.txt](https://archive.blender.org/developer/F6890943/blender_system_info.txt) Seems like ''atio6axx.dll'' is the culprit , I suspect this has something to do with my (old ) graphics card
Author

Any info regarding the debug file ?

Any info regarding the debug file ?
Member

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Brecht Van Lommel changed title from alternating between hair edit mode and object mode results in crash to Hair edit mode crashes with AMD Radeon HD 5700 2019-03-29 18:02:03 +01:00

Added subscriber: @nacioss

Added subscriber: @nacioss

There were three very similar reports open, I'm merging them all into one since this all seems like the same underlying issue. For some reason, particle hair edit mode is crashing in the graphics driver on this configuration.

The graphics driver version 15.201.1151.1008 is from 2015, and this card seems to be no longer actively supported by AMD. You can try installing the graphics drivers again, either the Catalyst or Crimson Edition Beta.
https://www.amd.com/en/support/graphics/amd-radeon-hd/ati-radeon-hd-5000-series/ati-radeon-hd-5750

If that doesn't help, it will require some kind of workaround for a likely graphics driver bug in Blender, if we decide to still officially support this GPU at all.

There were three very similar reports open, I'm merging them all into one since this all seems like the same underlying issue. For some reason, particle hair edit mode is crashing in the graphics driver on this configuration. The graphics driver version 15.201.1151.1008 is from 2015, and this card seems to be no longer actively supported by AMD. You can try installing the graphics drivers again, either the Catalyst or Crimson Edition Beta. https://www.amd.com/en/support/graphics/amd-radeon-hd/ati-radeon-hd-5000-series/ati-radeon-hd-5750 If that doesn't help, it will require some kind of workaround for a likely graphics driver bug in Blender, if we decide to still officially support this GPU at all.
Philipp Oeser removed their assignment 2019-04-24 10:50:08 +02:00
Member

did reinstalling drivers help here?

did reinstalling drivers help here?

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Although with a different GPU (AMD Radeon HD 7500M/7600M Series), I think I could reproduce the same problem.
Here's a solution:
P960: to #62701

diff --git a/source/blender/draw/intern/draw_cache_impl_particles.c b/source/blender/draw/intern/draw_cache_impl_particles.c
index e998b17a44f..54188371bd0 100644
--- a/source/blender/draw/intern/draw_cache_impl_particles.c
+++ b/source/blender/draw/intern/draw_cache_impl_particles.c
@@ -99,7 +99,7 @@ typedef struct HairAttributeID {
 
 typedef struct EditStrandData {
   float pos[3];
-  uchar color;
+  float color;
 } EditStrandData;
 
 static GPUVertFormat *edit_points_vert_format_get(uint *r_pos_id, uint *r_color_id)
@@ -110,7 +110,7 @@ static GPUVertFormat *edit_points_vert_format_get(uint *r_pos_id, uint *r_color_
     /* Keep in sync with EditStrandData */
     pos_id = GPU_vertformat_attr_add(&edit_point_format, "pos", GPU_COMP_F32, 3, GPU_FETCH_FLOAT);
     color_id = GPU_vertformat_attr_add(
-        &edit_point_format, "color", GPU_COMP_U8, 1, GPU_FETCH_INT_TO_FLOAT_UNIT);
+        &edit_point_format, "color", GPU_COMP_F32, 1, GPU_FETCH_FLOAT);
   }
   *r_pos_id = pos_id;
   *r_color_id = color_id;
@@ -694,11 +694,11 @@ static int particle_batch_cache_fill_segments_edit(
       if (particle) {
         float weight = particle_key_weight(particle, i, strand_t);
         /* NaN or unclamped become 0xFF */
-        seg_data->color = (uchar)((weight <= 1.0f) ? 0xFE * weight : 0xFF);
+        seg_data->color = (weight < 1.0f) ? weight : 1.0f;
       }
       else {
         float selected = particle_key_select_ratio(edit, i, strand_t);
-        seg_data->color = (uchar)(0xFF * selected);
+        seg_data->color = selected;
       }
       GPU_indexbuf_add_generic_vert(elb, curr_point);
       curr_point++;
@@ -1565,7 +1565,7 @@ static void particle_batch_cache_ensure_edit_inner_pos(PTCacheEdit *edit,
     const PTCacheEditPoint *point = &edit->points[point_index];
     for (int key_index = 0; key_index < point->totkey - 1; key_index++) {
       PTCacheEditKey *key = &point->keys[key_index];
-      uchar color = (key->flag & PEK_SELECT) ? 0xFF : 0x00;
+      float color = (key->flag & PEK_SELECT) ? 1.0f : 0.0f;
       GPU_vertbuf_attr_set(cache->edit_inner_pos, pos_id, global_key_index, key->world_co);
       GPU_vertbuf_attr_set(cache->edit_inner_pos, color_id, global_key_index, &color);
       global_key_index++;
@@ -1611,7 +1611,7 @@ static void particle_batch_cache_ensure_edit_tip_pos(PTCacheEdit *edit, Particle
   for (int point_index = 0; point_index < edit->totpoint; point_index++) {
     const PTCacheEditPoint *point = &edit->points[point_index];
     PTCacheEditKey *key = &point->keys[point->totkey - 1];
-    uchar color = (key->flag & PEK_SELECT) ? 0xFF : 0x00;
+    float color = (key->flag & PEK_SELECT) ? 1.0f : 0.0f;
     GPU_vertbuf_attr_set(cache->edit_tip_pos, pos_id, point_index, key->world_co);
     GPU_vertbuf_attr_set(cache->edit_tip_pos, color_id, point_index, &color);
   }

However, this solution is disadvantageous to most other GPUs as it increases the space allocated in memory.
The ideal solution should come from the manufacturer.

Although with a different GPU (`AMD Radeon HD 7500M/7600M Series`), I think I could reproduce the same problem. Here's a solution: [P960: to #62701](https://archive.blender.org/developer/P960.txt) ```diff diff --git a/source/blender/draw/intern/draw_cache_impl_particles.c b/source/blender/draw/intern/draw_cache_impl_particles.c index e998b17a44f..54188371bd0 100644 --- a/source/blender/draw/intern/draw_cache_impl_particles.c +++ b/source/blender/draw/intern/draw_cache_impl_particles.c @@ -99,7 +99,7 @@ typedef struct HairAttributeID { typedef struct EditStrandData { float pos[3]; - uchar color; + float color; } EditStrandData; static GPUVertFormat *edit_points_vert_format_get(uint *r_pos_id, uint *r_color_id) @@ -110,7 +110,7 @@ static GPUVertFormat *edit_points_vert_format_get(uint *r_pos_id, uint *r_color_ /* Keep in sync with EditStrandData */ pos_id = GPU_vertformat_attr_add(&edit_point_format, "pos", GPU_COMP_F32, 3, GPU_FETCH_FLOAT); color_id = GPU_vertformat_attr_add( - &edit_point_format, "color", GPU_COMP_U8, 1, GPU_FETCH_INT_TO_FLOAT_UNIT); + &edit_point_format, "color", GPU_COMP_F32, 1, GPU_FETCH_FLOAT); } *r_pos_id = pos_id; *r_color_id = color_id; @@ -694,11 +694,11 @@ static int particle_batch_cache_fill_segments_edit( if (particle) { float weight = particle_key_weight(particle, i, strand_t); /* NaN or unclamped become 0xFF */ - seg_data->color = (uchar)((weight <= 1.0f) ? 0xFE * weight : 0xFF); + seg_data->color = (weight < 1.0f) ? weight : 1.0f; } else { float selected = particle_key_select_ratio(edit, i, strand_t); - seg_data->color = (uchar)(0xFF * selected); + seg_data->color = selected; } GPU_indexbuf_add_generic_vert(elb, curr_point); curr_point++; @@ -1565,7 +1565,7 @@ static void particle_batch_cache_ensure_edit_inner_pos(PTCacheEdit *edit, const PTCacheEditPoint *point = &edit->points[point_index]; for (int key_index = 0; key_index < point->totkey - 1; key_index++) { PTCacheEditKey *key = &point->keys[key_index]; - uchar color = (key->flag & PEK_SELECT) ? 0xFF : 0x00; + float color = (key->flag & PEK_SELECT) ? 1.0f : 0.0f; GPU_vertbuf_attr_set(cache->edit_inner_pos, pos_id, global_key_index, key->world_co); GPU_vertbuf_attr_set(cache->edit_inner_pos, color_id, global_key_index, &color); global_key_index++; @@ -1611,7 +1611,7 @@ static void particle_batch_cache_ensure_edit_tip_pos(PTCacheEdit *edit, Particle for (int point_index = 0; point_index < edit->totpoint; point_index++) { const PTCacheEditPoint *point = &edit->points[point_index]; PTCacheEditKey *key = &point->keys[point->totkey - 1]; - uchar color = (key->flag & PEK_SELECT) ? 0xFF : 0x00; + float color = (key->flag & PEK_SELECT) ? 1.0f : 0.0f; GPU_vertbuf_attr_set(cache->edit_tip_pos, pos_id, point_index, key->world_co); GPU_vertbuf_attr_set(cache->edit_tip_pos, color_id, point_index, &color); } ``` However, this solution is disadvantageous to most other GPUs as it increases the space allocated in memory. The ideal solution should come from the manufacturer.

I don't think this memory saving in particle edit mode is important. The number of edit particle is usually significantly smaller than the total number of child particles, and it's not a big memory increase regardless.

I don't think this memory saving in particle edit mode is important. The number of edit particle is usually significantly smaller than the total number of child particles, and it's not a big memory increase regardless.

Added subscriber: @fclem

Added subscriber: @fclem

So as far as I'm concerned this fine to commit, if @fclem agrees.

So as far as I'm concerned this fine to commit, if @fclem agrees.

yep also fine for me

yep also fine for me

This issue was referenced by fa4201f82d

This issue was referenced by fa4201f82da5cd605af88195d1d98a256c678782

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62701
No description provided.