Fix T62701: Hair edit mode crashes on some old AMD Radeon drivers.

The crash is related to the format, but the real reason is unknown.